# tcc_ufg_akcit_nlp

./: .env.example  .gitignore  Makefile  README.md  ipykernel.sh  pyproject.toml
chatbot/: package.json
chatbot/app/: layout.tsx  page.tsx
chatbot/app/api/chat/: route.ts
data/references/: selected-drugs.txt
docs/: mkdocs.yml
docs/docs/: index.md  methodology_drugleaflet_graph_rag.md
miner/: README.md  database.py  main.py  requirements.txt  scraper.py
miner/anvisa_miner_api/: requirements.txt
miner/anvisa_miner_api/src/: main.py  mining.py
miner/anvisa_miner_api/src/static/: index.html
miner/anvisa_miner_frontend/: index.html  package.json  vite.config.js
miner/anvisa_miner_frontend/src/: App.css  App.jsx
miner/database/mongodb/tcc_ufg_akcit_nlp/bnafar-products/: tcc_ufg_akcit_nlp.bnafar-products.json
miner/database/mongodb/tcc_ufg_akcit_nlp/cities/: tcc_ufg_akcit_nlp.cities.json
miner/database/mongodb/tcc_ufg_akcit_nlp/cnes-unit-types/: tcc_ufg_akcit_nlp.cnes-unit-types.json
miner/database/mongodb/tcc_ufg_akcit_nlp/drugs/: tcc_ufg_akcit_nlp.drugs.json
miner/database/mongodb/tcc_ufg_akcit_nlp/health-programs/: tcc_ufg_akcit_nlp.health-programs.json
miner/database/mongodb/tcc_ufg_akcit_nlp/search-parameters/: tcc_ufg_akcit_nlp.search-parameters.json
miner/database/mongodb/tcc_ufg_akcit_nlp/selected-drugs/: tcc_ufg_akcit_nlp.selected-drugs.json
miner/database/mongodb/tcc_ufg_akcit_nlp/source-systems/: tcc_ufg_akcit_nlp.source-systems.json
miner/database/mongodb/tcc_ufg_akcit_nlp/states/: tcc_ufg_akcit_nlp.states.json
notebooks/: agent_orchestrator.ipynb  llm_structured_output.ipynb  pdf_graph_extract.ipynb  pdf_graph_rag.ipynb  question_to_api_call.ipynb
src/: config.py  constants.py
src/agents/: main.py
src/agents/prompt_templates/: graph_rag.py  question_to_api.py
src/agents/tools/: graph_rag.py  question_to_api.py  tools.py
src/api/: main.py
src/api/routes/: routes.py
src/api/schemas/request/: horus.py
src/api/schemas/response/: horus.py
src/connetion/: chat_model.py  embeddings.py  gen_ai_connection.py  graph_db.py
src/data_processing/: chunks.py  pdf_and_markdown_pipeline.py
src/etl/: kg_from_text.py  pdf_and_markdown_pipeline.py
src/gradio/: chat.py
src/kg/: graph_rag.py  kg_from_text.py
src/utils/: dataviz.py  gen_ai_connection.py
