[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "TCC da P\u00f3s Gradu\u00e7\u00e3o em NLP da UFG em parceria com a AKCIT"
authors = [
  { name = "Ana Claudia Cabral e Marilia Ribeiro da Silva" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "selenium (>=4.33.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "docling[all] (>=2.35.0,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "nlp (>=0.4.0,<0.5.0)",
    "pymupdf4llm (>=0.0.24,<0.0.25)",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

