[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "TCC da P\u00f3s Gradu\u00e7\u00e3o em NLP da UFG em parceria com a AKCIT"
authors = [
  { name = "Ana Claudia Cabral e Marilia Ribeiro da Silva" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "selenium (>=4.33.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "docling[all] (>=2.35.0,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "nlp (>=0.4.0,<0.5.0)",
    "pymupdf4llm (>=0.0.24,<0.0.25)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "unstructured[md] (>=0.17.2,<0.18.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "json-repair (>=0.39.1,<0.40.0)",
    "langchain-openai (>=0.3.19,<0.4.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "langchain-graph-retriever (>=0.8.0,<0.9.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "gradio (>=5.34.2,<6.0.0)",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

